# aipager

./: .coveragerc  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  flake.nix  install.sh  pyproject.toml
.github/workflows/: docker.yml  nix.yml  publish.yml  test.yml
aipager/: __init__.py  __main__.py  audit.py  claude_bootstrap.py  cli.py  config.py  daemon.py  doctor.py  dtach_inject.py  dtach_launcher.py  errors.py  hook_receiver.py  injector.py  md_to_tg.py  migrate.py  notify_hook.py  observer.py  pane_monitor.py  policy.py  policy_snapshot.py  preflight.py  safety.py  scope.py  service.py  session_mgr.py  session_monitor.py  session_store.py  setup_wizard.py  state.py  status.py  statusline_notify.py  team.py  telegram_api.py  telegram_bot.py  tmux_inject.py  transcript.py  ui.py  updater.py
aipager/bot/: __init__.py  animation.py  auth.py  callbacks.py  core.py  dashboard.py  handlers.py  keyboards.py  lifecycle.py  notify.py  observer.py  session_ops.py  transport.py  voice.py
aipager/cli/: __init__.py  daemon.py  policy.py  resume.py  session.py
aipager/dtach/: __init__.py  enforce.py  hook_receiver.py  inject.py  launcher.py  notify_hook.py  redraw.py  statusline_notify.py
aipager/wizard/: __init__.py  _constants.py  daemon_io.py  display.py  draft.py  edit_menu.py  first_run.py  scope_flows.py  scope_io.py  settings_patch.py  team_setup.py  telegram_api.py
docs/: README.md  architecture.md  commands.md  groups.md  hooks.md  observers.md  security.md  troubleshooting.md
packaging/: README.md
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/snap/: README.md  snapcraft.yaml
scripts/: aipager-statusline.py  aipager.service.example  claude-dtach.sh  dtach-redraw.py
tests/: conftest.py  test_audit.py  test_audit_scope.py  test_auto_deny_scoped.py  test_bot_animation.py  test_bot_auth.py  test_bot_auth_scoped.py  test_bot_callbacks.py  test_bot_callbacks_extra.py  test_bot_callbacks_perms.py  test_bot_handlers_extra.py  test_bot_handlers_more.py  test_bot_handlers_perms.py  test_bot_handlers_voice_file.py  test_bot_keyboards_dashboard.py  test_bot_keyboards_perms.py  test_bot_lifecycle.py  test_bot_notify.py  test_bot_notify_extra.py  test_bot_notify_idle.py  test_bot_session_ops.py  test_claude_bootstrap.py  test_cli_daemon.py  test_cli_daemon_run.py  test_cli_main.py  test_cli_policy.py  test_cli_resume.py  test_cli_resume_skip_perms.py  test_cli_session_verbs.py  test_config_load.py  test_doctor.py  test_doctor_extra.py  test_dtach_hook_stubs.py  test_dtach_inject_helpers.py  test_dtach_inject_launch.py  test_dtach_launcher.py  test_dtach_launcher_extra.py  test_dtach_redraw.py  test_errors.py  test_hook_enforcement.py  (+53 more)
tests/e2e/: conftest.py  harness.py  test_e2e_bash_denies.py  test_e2e_benign.py  test_e2e_daemon_halt.py  test_e2e_origin.py  test_e2e_path_denies.py  test_e2e_roles.py  test_e2e_sticky.py  test_e2e_whoami.py
tests/integration/perms_mode_ux/: test_config_default_mode.py  test_new_reply.py  test_permission_keyboard.py  test_perms_command.py  test_persistence.py  test_resume_mode.py  test_safety_strings.py  test_team_admin_gate.py
