[project]
name = "aipager"
version = "0.3.3"
description = "Telegram remote-control daemon for Claude Code CLI sessions running in dtach"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dev-aly3n", email = "66creation@gmail.com" }]
keywords = ["claude", "claude-code", "telegram", "remote-control", "dtach", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "python-telegram-bot>=20",
    "dtach-bin>=0.9.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "build", "twine"]

[project.scripts]
aipager            = "aipager.cli:main"
# Internal hooks invoked by Claude Code (not by users). They stay on
# PATH because ~/.claude/settings.json references them by name.
aipager-hook       = "aipager.notify_hook:main"
aipager-statusline = "aipager.statusline_notify:main"

[project.urls]
Source    = "https://github.com/dev-aly3n/aipager"
Issues    = "https://github.com/dev-aly3n/aipager/issues"
Changelog = "https://github.com/dev-aly3n/aipager/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aipager"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
