[project]
name = "aipager"
version = "0.4.23"
description = "Telegram remote-control daemon for Claude Code CLI sessions running in dtach"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dev-aly3n", email = "66creation@gmail.com" }]
keywords = ["claude", "claude-code", "telegram", "remote-control", "dtach", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "python-telegram-bot>=20",
    "dtach-bin>=0.9.1",
    "rich>=14.0,<16",
    "questionary>=2.0,<3",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "build", "twine"]
# Voice input support — install with `pip install 'aipager[voice]'` /
# `uv tool install 'aipager[voice]'`. faster-whisper transitively pulls
# ctranslate2 (~60 MB), onnxruntime (~55 MB), av, numpy and tokenizers,
# so the on-disk install bumps by ~200 MB. Plus a ~74 MB model download
# on first voice message (cached under ~/.cache/huggingface/hub).
# Default install stays at its current ~3 MB.
voice = ["faster-whisper>=1.0"]

[project.scripts]
aipager            = "aipager.cli:main"
# Internal hooks invoked by Claude Code (not by users). They stay on
# PATH because ~/.claude/settings.json references them by name.
aipager-hook       = "aipager.dtach.notify_hook:main"
aipager-statusline = "aipager.dtach.statusline_notify:main"

[project.urls]
Source    = "https://github.com/dev-aly3n/aipager"
Issues    = "https://github.com/dev-aly3n/aipager/issues"
Changelog = "https://github.com/dev-aly3n/aipager/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aipager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# e2e tests drive REAL Claude (claude -p) + the real hook; they need claude
# auth + network + tokens, so they're excluded from the default run and CI.
# Run them with:  pytest -m e2e        (all)
#                 pytest tests/e2e/test_e2e_sticky.py -m e2e   (one file)
# The CLI -m overrides this addopts default.
addopts = "-m 'not e2e'"
markers = [
    "e2e: real-Claude end-to-end safety test (opt-in; needs claude auth + network + tokens)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
